--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                               </header>
         <main class="main">
                                       <div class="text-2">
-                                        <p class="text-two"><b>Robo School</b> – учреждение для формирования кадрового педагогического резерва в сфере робототехникии и программирования</p>
+                                        <p class="text-two"><b>Robo School</b> – учреждение для формирования кадрового педагогического резерва в сфере робототехнике и программированию</p>
                                       </div>
                                       <div class="box-2">
                                       <div class="numer-1"><p class="text-three">10</p></div>
