--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
       <div class="wrapper">
+        <div class="container-wrapper">
                               <header class="header">
                                 <div class="container">
                                   <div class="nav-top">
@@ -206,6 +207,7 @@
           </div>
           
         </footer>
+      </div>
       </div>
   </body>
 </html>
